# mangrove

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  mangrove-rfc.md  mangrove-spec.md
.github/workflows/: ci.yml
crates/mangrove-canonical/: Cargo.toml
crates/mangrove-canonical/src/: lib.rs
crates/mangrove-cbor/: Cargo.toml
crates/mangrove-cbor/src/: lib.rs
crates/mangrove-cli/: Cargo.toml
crates/mangrove-cli/src/: main.rs
crates/mangrove-cli/tests/: anchoring.rs  cli.rs  convert.rs  fixtures.rs  fmt.rs  imports.rs  openapi.rs  pins.rs
crates/mangrove-compose/: Cargo.toml
crates/mangrove-compose/src/: lib.rs  load.rs  merge.rs  subtype.rs
crates/mangrove-conformance/: Cargo.toml
crates/mangrove-conformance/src/: lib.rs
crates/mangrove-conformance/tests/: corpus.rs
crates/mangrove-convert/: Cargo.toml
crates/mangrove-convert/src/: lib.rs  toml.rs  yaml.rs
crates/mangrove-core/: Cargo.toml
crates/mangrove-core/src/: error.rs  lib.rs  num.rs  value.rs
crates/mangrove-fmt/: Cargo.toml
crates/mangrove-fmt/src/: lib.rs
crates/mangrove-lsp/: Cargo.toml
crates/mangrove-lsp/src/: analysis.rs  lib.rs  line_index.rs  server.rs
crates/mangrove-lsp/tests/: e2e.rs
crates/mangrove-openapi/: Cargo.toml
crates/mangrove-openapi/src/: lib.rs
crates/mangrove-resolve/: Cargo.toml
crates/mangrove-resolve/src/: lib.rs
crates/mangrove-syntax/: Cargo.toml
crates/mangrove-syntax/src/: lexer.rs  lib.rs  parser.rs  ty.rs
crates/mangrove-syntax/src/cst/: kind.rs  lex.rs  lower.rs  mod.rs  parse.rs  tests.rs
crates/mangrove-typed/: Cargo.toml
crates/mangrove-typed/src/: env.rs  eval.rs  lib.rs  predicate.rs  resolve.rs  validate.rs
docs/: MIGRATING.md  migrate.just
docs/superpowers/plans/: 2026-06-24-m0-scaffold-ci.md  2026-06-24-m1-l0-data.md  2026-06-24-m2a-l1-typed-core.md  2026-06-24-m2b-units-brands.md  2026-06-24-m2c-require-annotations-defaults.md  2026-06-24-m3a-l2-local-composition.md  2026-06-24-m3b1-resolver-lockfile.md  2026-06-25-v0.3.0-plan1-cst-foundation.md  2026-06-26-v0.3.0-plan2-formatter.md  2026-06-29-bare-value-top-level.md
docs/superpowers/specs/: 2026-06-24-m1-l0-data-design.md  2026-06-24-m2a-l1-typed-core-design.md  2026-06-24-m2b-units-brands-design.md  2026-06-24-m2c-require-annotations-defaults-design.md  2026-06-24-m3a-l2-local-composition-design.md  2026-06-24-m3b1-resolver-lockfile-design.md  2026-06-24-m3b2-git-backend-design.md  2026-06-24-mangrove-roadmap-design.md  2026-06-25-m4-l3-templated-design.md  2026-06-25-m4d2-module-calls-design.md  2026-06-25-m5-interop-design.md  2026-06-25-m6-cross-file-types-design.md  2026-06-25-m7-per-package-anchoring-design.md  2026-06-25-m8-recursive-types-design.md  2026-06-25-v0.3.0-cst-formatter-lsp-design.md
editors/: README.md
editors/nvim/ftdetect/: mangrove.lua
editors/nvim/lua/: mangrove.lua
editors/zed/: Cargo.toml  extension.toml
editors/zed/languages/mangrove/: config.toml
editors/zed/src/: lib.rs
examples/: gitops-resources.mang  k8s-deployment.mang  k8s-templated.mang  pyproject.mang
examples/real-world/: ci.yaml  deployment.yaml  pyproject.toml
k8s/: Dockerfile  README.md  krm-function.sh  kubectl-mangrove
tests/conformance/l0/: bytes.expected  bytes.mang  decimals.expected  decimals.mang  ints.expected  ints.mang  keysort.expected  keysort.mang  nested.expected  nested.mang  smoke.expected  smoke.mang  strings.expected  strings.mang
tests/conformance/l1/: brand_ok.mang  brand_range.expected  brand_range.mang  kind_mismatch.expected  kind_mismatch.mang  list_elem.expected  list_elem.mang  missing_required.expected  missing_required.mang  nested_path.expected  nested_path.mang  ok_basic.mang  optional_absent.mang  out_of_range.expected  out_of_range.mang  require_fail.expected  require_fail.mang  require_len.mang  require_ok.mang  str_len_ok.mang  str_len_regex_ok.mang  str_len_too_long.expected  str_len_too_long.mang  str_len_too_short.expected  str_len_too_short.mang  union_miss.expected  union_miss.mang  unit_fractional_inexact.expected  unit_fractional_inexact.mang  unit_ok.mang  unit_unknown_suffix.expected  unit_unknown_suffix.mang  unknown_field.expected  unknown_field.mang
tree-sitter-mangrove/: README.md  grammar.js  package.json
tree-sitter-mangrove/queries/: highlights.scm
tree-sitter-mangrove/src/: grammar.json  node-types.json  parser.c
tree-sitter-mangrove/test/corpus/: basics.txt
