[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/morrieinmaas/mangrove"

[workspace.dependencies]
num-bigint = "0.4"
num-traits = "0.2"
bigdecimal = "0.4"
blake3 = "1"
regex = "1"
toml = "0.8"
yaml-rust2 = "0.10"
serde_json = "1"
rowan = "0.16"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
