[package]
name = "mangrove-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mangrove"
path = "src/main.rs"

[dependencies]
mangrove-core = { path = "../mangrove-core" }
mangrove-syntax = { path = "../mangrove-syntax" }
mangrove-canonical = { path = "../mangrove-canonical" }
mangrove-typed = { path = "../mangrove-typed" }

[lints]
workspace = true
