[package]
name = "mangrove-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mangrove-syntax = { path = "../mangrove-syntax" }
mangrove-canonical = { path = "../mangrove-canonical" }

[lints]
workspace = true
