[package]
name = "mangrove-convert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mangrove-core = { path = "../mangrove-core" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
bigdecimal = { workspace = true }
toml = { workspace = true }
yaml-rust2 = { workspace = true }

[dev-dependencies]
mangrove-canonical = { path = "../mangrove-canonical" }

[lints]
workspace = true
