[package]
name = "mangrove-fmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mangrove-syntax = { path = "../mangrove-syntax" }

[dev-dependencies]
mangrove-canonical = { path = "../mangrove-canonical" }
mangrove-core = { path = "../mangrove-core" }

[lints]
workspace = true
