[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mangrove-tools"
version = "1.21.0"
description = "Example project for the Mangrove interop fixtures"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["config", "typed", "content-addressed"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
mangrove-tool = "mangrove_tools.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
